--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,7 +11,7 @@ services:
   web:
     build: .
     env_file: ./.env
-    command: python manage.py runserver 0.0.0.0:8000
+    command: "/code/docker-entrypoint.sh"
     volumes:
       - ./mastermind:/code
     ports:
