--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,20 +1,28 @@
 version: '3'
 
 services:
-  db:
-    image: postgres
-    environment:
-      - POSTGRES_USER=codemaker
-      - POSTGRES_PASSWORD=TH3c0d3M4k3R!
-      - POSTGRES_DB=mastermind
-
   web:
     build: .
-    env_file: ./.env
-    command: "/code/docker-entrypoint.sh"
     volumes:
-      - ./mastermind:/code
+      - ./mastermind:/app
+    command: "/app/docker-entrypoint.sh"
     ports:
       - "8000:8000"
+    env_file:
+      - mastermind/.env
     depends_on:
       - db
+
+  db:
+    image: postgres:latest
+    environment:
+      POSTGRES_DB: mastermind
+      POSTGRES_USER: codemaker
+      POSTGRES_PASSWORD: TH3c0d3M4k3R!
+    volumes:
+      - postgres_data:/var/lib/postgresql/data
+    ports:
+      - "5432:5432"
+
+volumes:
+  postgres_data:
