--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
-Django>=2.0,<3.0
-psycopg2>=2.7,<3.0
-djangorestframework==3.9.2
+Django>=4.0,<5.0
+django-environ
+psycopg2>=2.9,<3.0
+djangorestframework>=3.13,<4.0
